Made ScrabbleModel static method call private - Use alternate constructor instead to fit old use better.