@@ -18,14 +18,14 @@ class DrawPileTest {
      * Set up for each test case in the test suite,
      * initializes a Scrabble model and list of players
      *
-     * @author: Vladimir Kovacina
+     * @author Vladimir Kovacina
      *
      */
     @BeforeEach
     void setUp() {
 
-        players =Arrays.asList("Vlad");
-        model = new ScrabbleModel(ScrabbleModel.getPlayerInfos(players));
+        players = List.of("Vlad");
+        model = new ScrabbleModel(players);
 
     }
 
@@ -37,7 +37,8 @@ class DrawPileTest {
     @Test
     void containsAllLetters(){
         DrawPile dp = new DrawPile();
-        for(Letter expectedLetter: Letter.values()) { //check if the DrawPile has the correct number of each type of letter (INCL blank)
+        //check if the DrawPile has the correct number of each type of letter (INCL blank)
+        for(Letter expectedLetter: Letter.values()) {
             assertEquals(dp.getLetterPile().stream().filter(
                     tile -> tile.getLetter().equals(expectedLetter)).count(),
                     expectedLetter.getFrequency()
@@ -48,7 +49,7 @@ class DrawPileTest {
     /**
      * Tests the initial drawPile to make sure it is the correct size
      *
-     * @author: Vladimir Kovacina
+     * @author Vladimir Kovacina
      */
     @Test
     void initialDrawPileSizeTest(){
@@ -60,7 +61,7 @@ class DrawPileTest {
      * Tests the addToPile() method, checks if it works properly when
      * multiple tiles are added and when no tiles are added
      *
-     * @author: Vladimir Kovacina
+     * @author Vladimir Kovacina
      */
 
     @Test
@@ -87,20 +88,22 @@ class DrawPileTest {
      * also checks if the new drawPile is the correct size, and tests
      * that is handles drawing from an empty drawPile
      *
-     * @author: Vladimir Kovacina
+     * @author Vladimir Kovacina
      */
 
     @Test
     void draw() {
         DrawPile dp = model.getDrawPile();
         Tile drawn = dp.draw();
-        assertTrue(drawn instanceof Tile);
+        assertNotNull(drawn);
         assertEquals(100-7-1, dp.getLetterPile().size());
+
+        // FIXME: draw until empty pile instead of setting it
 
         //Test Case where draw is drawing from empty pile
         List<Tile> empty = new ArrayList<>();
         dp.setLetterPile(empty);
         Tile drawn2 = dp.draw();
-        assertEquals(drawn2, null);
+        assertNull(drawn2);
     }
 }
